<resources>
    <string name="fmfiroz_link"><a href="https://www.facebook.com/Firoz-Mahmud-1938856869775917/">Developer@Firoz Mahmud</a></string>
    <string name="fmfiroz_developer">Developer@Firoz Mahmud</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6626454304064681~3443502670</string>
    <string name="facebook_app_id">132793190888303</string>
    <string name="fb_login_protocol_scheme">fb132793190888303</string>
    <string name="app_name">মকবুল শাহী জামে মসজিদ</string>
    <string name="package_name">pnpmsjm.com.bd.ourmasjid_1</string>
    <string name="package_name1">pnpmsjm.com.bd</string>
    <string name="app_id">ca-app-pub-6626454304064681~1735190404</string>
    <string name="app_id2">ca-app-pub-6626454304064681/1268286549</string>
    <string name="bismillah">বিসমিল্লাহির রাহমানির রাহিম</string>
    <string name="name">পবা নতুন পাড়া মকবুল শাহী জামে মসজিদ</string>
    <string name="name1of2">পবা নতুন পাড়া</string>
    <string name="name2of2">মকবুল শাহী জামে মসজিদ</string>
    <string name="address">পবা নতুন পাড়া, ১৮ নং ওয়ার্ড, সপুরা, শাহ মখদুম, রাজশাহী-৬২০৩</string>
    <string name="gothontontro">গঠনতন্ত্র</string>
    <string name="ghosona">ঘোষনা</string>
    <string name="mulniti">মূলনীতি</string>
    <string name="dharas">ধারাসমূহ</string>
    <string name="omorbani">অমরবাণী</string>
    <string name="onumodon">অনুমোদন</string>
<string name="comiti">কার্যনির্বাহী কমিটি</string>
    <string name="dayitto">দায়িত্ব ও কতর্বব্য</string>
    <string name="dh">নং</string>
<string name="dn">ধারা</string>
    <string name="detail">বিস্তারিত</string>
    <string name="fund">তহবিল</string>
<string name="bankname">ইসলামি ব্যাংক বাংলাদেশ লিঃ</string>
    <string name="branchname">নিউ মার্কেট শাখা, রাজশাহী</string>
    <string name="accnum">20502790200 8700 02</string>
    <string name="donatetoaccount">ব্যাংকের মাধ্যমে দান করুন অথবা সভাপতি/সেক্রেটারীর সঙ্গে যোগাযোগ করুন।</string>
    <string name="donate">দান করুন</string>
    <string name="sign">স্বাক্ষর</string>
    <string name="k">ক)</string>
    <string name="kh">খ)</string>
    <string name="g">গ)</string>
    <string name="gh">ঘ)</string>
    <string name="u">ঙ)</string>
    <string name="c">চ)</string>
    <string name="ch">ছ)</string>
    <string name="j">জ)</string>
    <string name="jh">ঝ)</string>
    <string name="iu">ঞ)</string>
    <string name="t">ট)</string>
    <string name="th">ঠ)</string>
    <string name="d">ড)</string>
    <string name="dha">ঢ)</string>
    <string name="n">ণ)</string>
    <string name="s1">১।</string>
    <string name="s2">২।</string>
    <string name="s3">৩।</string>
    <string name="s4">৪।</string>
    <string name="s5">৫।</string>
    <string name="s6">৬।</string>
    <string name="s7">৭।</string>
    <string name="s8">৮।</string>
    <string name="s9">৯।</string>
    <string name="s10">10।</string>
    <string name="s11">11।</string>
    <string name="s12">12।</string>
    <string name="s13">13।</string>
    <string name="s14">14।</string>
    <string name="s15">15।</string>
    <string name="s16">16।</string>
    <string name="s17">17।</string>
    <string name="s18">18।</string>
    <string name="s19">19।</string>
    <string name="s20">20।</string>
    <string name="aftab_uddin">মোঃ আফতাব উদ্দীন</string>
    <string name="ismail_hossain">মোঃ ইসমাইল হোসেন</string>
    <string name="sk_kamruzzaman">শেখ কামরুজ্জামান</string>
    <string name="abdun_nasir">মোঃ আব্দুন নাসির</string>
    <string name="paloan">মোঃ নুরুল ইসলাম পাহলোয়ান</string>
    <string name="eng_shohidul">প্রকৌ. মোঃ শহিদুল ইসলাম</string>
    <string name="empty">Empty</string>
    <string name="abdus_salam">মোঃ আব্দুস সালাম</string>
    <string name="md_kamrul">মোঃ কামরুজ্জামান</string>
    <string name="swapon">মোঃ আনিসুর রহমান (স্বপন)</string>
    <string name="abdul_halim">মোঃ আব্দুল হালিম</string>
    <string name="md_lalchan">মোঃ লালচাঁন</string>
    <string name="firoz_mahmud">মোঃ ফিরোজ মাহমুদ</string>
    <string name="baidul_islam">মোঃ বাইদুল ইসলাম</string>
    <string name="faruk_hossain">মোঃ ফারুক হোসেন</string>
    <string name="shohidul_sabuz">মোঃ শহিদুল ইসলাম (সবুজ)</string>
    <string name="mdsajamal">মোঃ শাহ্জামাল</string>
    <string name="aftab_uddin2">মোঃ আফতাব উদ্দীন</string>
    <string name="mojibur_rahman">মোঃ মজিবুর রহমান</string>
    <string name="abul_kashem">মাও. মোঃ আবুল কাশেম</string>
    <string name="saber_swadhin">মোঃ সাবের হোসেন (স্বাধীন)</string>
    <string name="sujon_sheikh">মোঃ সুজন শেখ</string>
    <string name="mohon_ali">মোঃ মোহন আলী</string>
    <string name="mohammad_ali">মোহাম্মদ আলী</string>
    <string name="fazle_khoda">ফজলে-ই-খোদা</string>
    <string name="mobileno">01XXX-XXXXXX</string>
    <string name="aftab_mobile">01715002021</string>
    <string name="kamruzzaman_mobile">01712076802</string>
    <string name="nasir_mobile">01711331702</string>
    <string name="ismail_mobile">01317155433</string>
    <string name="paloan_mobile">01758898048</string>
    <string name="shohidul_mobile">01711187317</string>
    <string name="salam_mobile">01716101240</string>
    <string name="kamrul_mobile">01913855573</string>
    <string name="swapon_mobile">01762786113</string>
    <string name="halim_mobile">01717670319</string>
    <string name="lalchan_mobile">01716083425</string>
    <string name="firoz_mobile">01719475388</string>
    <string name="baidul_mobile">01706687361</string>
    <string name="mohammad_mobile">01763743157</string>
    <string name="faruk_mobile">01719531813</string>
    <string name="sabuz_mobile">01712164103</string>
    <string name="sajamal_mobile">01719550465</string>
    <string name="aftab2_mobile">01714781891</string>
    <string name="mojibur_mobile">01712360876</string>
    <string name="kashem_mobile">01701049113</string>
    <string name="saber_mobile">01723587260</string>
    <string name="sujon_mobile">01756259920</string>
    <string name="mohon_mobile">01717816159</string>
    <string name="tushar_mobile">01734270567</string>
    <string name="upodesta">সদস্য, উপদেষ্টা পরিষদ</string>
    <string name="upodestaporishod">উপদেষ্টা পরিষদ</string>
    <string name="member">নির্বাহী সদস্য</string>
    <string name="sovapoti1">সভাপতি</string>
    <string name="co_sovapoti">সহ-সভাপতি</string>
    <string name="secratery">সাধারণ সম্পাদক</string>
    <string name="co_secratery">সহ-সাধারণ সম্পাদক</string>
    <string name="cashier">কোষাধ্যক্ষ</string>
    <string name="co_cashier">সহ-কোষাধ্যক্ষ</string>
    <string name="so_secratery">সমাজ কল্যাণ সম্পাদক</string>
    <string name="lib_secratery">প্রচার ও পাঠাগার সম্পাদক</string>
    <string name="sochib">সদস্য সচিব ও ঈমাম </string>
    <string name="dd3">ধারা-৩</string>
    <string name="hh3">নাম ও ঠিকানা</string>
    <string name="dhara3name">নাম:</string>
    <string name="dhara3namedetail">পবা নতুনপাড়া মকবুল শাহী জামে মসজিদ।</string>
    <string name="dhara3addr">ঠিকানা:</string>
    <string name="dhara3addrdetail">মহল্লা- পবা নতুনপাড়া, পোস্ট- সপুরা, ওয়ার্ড নং- ১৮, থানা- শাহ মখদুম, জেলা- রাজশাহী মহানগর, রাজশাহী।</string>
    <string name="dd9">ধারা-৯</string>
    <string name="hh9">কার্যনির্বাহী কমিটি গঠন প্রক্রিয়া</string>
    <string name="dhara9k">কার্যনির্বাহী কমিটি ৭নং ধারায় উল্লেখিত মসজিদের নিয়মিত সদস্যদের দ্বারা নির্বাচিত হবেন। নির্বাচন-১ প্রস্তাব ও সমর্থনের ভিত্তিতে অথবা নির্বাচন-২ গোপন ব্যালটের ভিত্তিতে হবে।</string>
    <string name="dhara9kh">কার্যনির্বাহী কমিটির মেয়ার উত্তীর্ণ হবার ৯০ (নব্বই) দিন পূর্বে বর্তমান কার্যনির্বাহী কমিটি নতুন কার্যনির্বাহী কমিটি গঠনের প্রস্তুতি গ্রহন এবং মেয়াদ শেষ হবার পূর্বেই নতুন কমিটি গঠন সম্পন্ন করবেন।</string>
    <string name="dhara9g">নতুন কার্যনির্বাহী কমিটি গঠনের লক্ষে বর্তমান কার্যনির্বাহী কমিটির সভায় একটি “নির্বাচন কমিশন” গঠন করতে হবে। একজন প্রধান নির্বাচন কমিশনার ও দুইজন নির্বাচন কমিশনারের সমন্বয়ে নির্বাচন কমিশন গঠিত হবে। সাধারণ সম্পাদক নির্বাচন সংশ্লিষ্টে সকল বিষয়াদি প্রধান নির্বাচন কমিশনারকে লিখিতভাবে জানাবেন এবং প্রয়োজনীয় তথ্যাদি সরবরাহ করবেন।</string>
    <string name="dhara9gh">মসজিদের মত একটি পবিত্রতম ধর্মীয় প্রতিষ্ঠানে নির্বাচন কাম্য নয়। এ কারণে প্রধান নির্বাচন কমিশনার “নির্বাচনী সভা” অনুষ্ঠানের দিন তারিখ ঠিক করে জুম্মার নামাজে ঘোষণা দিবেন এবং প্রস্তাব ও সমর্থনের ভিত্তিতে নতুন কার্যনির্বাহী কমিটি গঠনের উদ্যোগ গ্রহণ করবেন। তালিকাভুক্ত মোট সদস্যের ২/৩ (দুই তৃতীয়াংশ) সদস্যের উপস্থিতিতে নির্বাচনী সভা করা যাবে। ২/৩ (দুই তৃতীয়াংশ) সদস্য উপস্থিত না থাকলে সভা স্থগিত করতে হবে এবং পরবর্তী জুম্মার নামাজে সভা স্থগিতের ঘোষনার তারিখ হতে ১৫ (পনের) দিনের মধ্যে “স্থগিত নির্বাচনী সভা” করতে হবে। এ সভায় উপস্থিত সদস্যদের সম্মতিক্রমে “প্রস্তাব ও সমর্থনের ভিত্তিতে” নতুন কার্যনির্বাহী কমিটি গঠন সম্পন্ন করা যাবে।</string>
    <string name="dhara9u">উপ-ধারা (ঘ) এর ভিত্তিতে নির্বাচন কমিশন নতুন কার্যনির্বাহী কমিটি গঠন করতে ব্যর্থ হলে এবং ফেৎনা ও বিশৃঙ্খলা সৃষ্টির আশংকা থাকলে “গোপন ব্যালটের ভিত্তিতে” নতুন কার্যনির্বাহী কমিটি গঠনের প্রয়োজনীয় ব্যবস্থা গ্রহন করবেন এবং বর্তমান কমিটির মেয়াদ শেষ হবার পূর্বেই কমিটি গঠন সম্পূর্ণ করবেন।</string>
    <string name="dhara9c">নতুন কার্যনির্বাহী কমিটি গঠনের ক্ষেত্রে এ গঠনতন্ত্রে উল্লেখ নাই এমন কোন বিষয়ে নির্বাচন কমিশনের সিদ্ধান্তই চূড়ান্ত বলে বিবেচিত হবে।</string>
    <string name="dhara9ch">দৈব-দূর্বিপাক বা অনিবার্য কারণ বশতঃ যদি নির্বাচন কমিশন নির্ধারিত সময়ের মধ্যে নতুন কার্যনির্বাহী কমিটি গঠনে ব্যর্থ হন তবে উক্ত সময়ের মধ্যেই কার্যনির্বাহী কমিটির সভাপতি/সাধারণ সম্পাদক-কে লিখিত ভাবে জানাতে হবে এবং ব্যর্থতার কারণ উল্লেখপূর্বক জুম্মার নামাজে সমবেত মুসল্লীদেরকে অবহিত করতে হবে। জুম্মার নামাজ শেষে মসজিদের খতিব/ইমাম সাহেবের পরিচালনায় উপস্থিত মসজিদের সদস্যদের সম্মতিক্রমে তাদের মধ্য হতে ৯ (নয়) সদস্য বিশিস্ট একটি এড্-হক কমিটি গঠন করতে হবে। এড্-হক কমিটিতে একজন আহ্বায়ক, একজন কোষাধ্যক্ষ এবং ৭ (সাত) জন সদস্য থাকবেন। গঠনতন্ত্রের অন্য ধারায় যাহাই থাকুক না কেন এড্-হক কমিটি গঠনের পরবর্তী দিন ও তারিখ হতে বর্তমান কার্যনির্বাহী কমিটি বাতিল বলে গণ্য হবে এবং উক্ত তারিখ হতে ৭ (সাত) দিনের মধ্যে এড্-হক কমিটির আহ্বায়ক ও কোষাধ্যক্ষের নিকট বর্তমান কার্যনির্বাহী কমিটি দায়িত্ব হস্তান্তর করবেন।</string>
    <string name="dhara9j">এড্-হক কমিটি গঠনের তারিখ থেকেই মসজিদ পরিচালনার দায়িত্বপ্রাপ্ত হবেন এবং উক্ত তারিখ হতে ৬০ (ষাট) দিনের মধ্যে গঠনতন্ত্র মোতাবেক নতুন কার্যনির্বাহী কমিটি গঠনের প্রয়োজনীয় ব্যবস্থা গ্রহন করবেন।</string>
    <string name="dhara9jh">দৈব-দুর্বিপাকে বা অনিবার্য কারণ বশতঃ যদি এড্-হক কমিটিও নির্ধারিত সময়ের মধ্যে নতুন কার্যনির্বাহী কমিটি গঠন করতে ব্যর্থ হন তা হলে জুম্মার নামাজে মুসল্লীবৃন্দকে অবহিত করতে হবে। মসজিদে সমবেত সদস্য ও মুসল্লীগণ এ বিষয়ে যে কোন সিদ্ধান্ত গ্রহণ করতে পারবেন।</string>
    <string name="dd20">ধারা-২০</string>
    <string name="hh20">ছুটি সংক্রান্ত বিধিমালা</string>
    <string name="dhara20k">কার্যনির্বাহী কমিটি সরকারী বিধি মতে মসজিদে নিয়োজিত ইমাম, মুয়াজ্জিন ও খাদেমের ছুটি নির্ধারণ করবেন। বাৎসরিক সাময়িক ছুটি ২০ (বিশ) দিনের বেশি হবে না।</string>
    <string name="dhara20kh">এক সঙ্গে ১০ (দশ) দিনের ছুটি মঞ্জুর করা যাবে না।</string>
    <string name="dhara20g">এক সঙ্গে ৩ (তিন) দিনের বেশী ছুটি ভোগ করতে হলে বদলী লোক রাখতে হবে। তবে তিন দিনের মধ্যে শুক্রবার থাকলে জুম্মার খতীব অবশ্যই রাখতে হবে।</string>
    <string name="dhara20gh">ছুটির আবেদনের পরিপ্রেক্ষিতে সভাপতি সর্বোচ্চ ১০ (দশ) দিনের এবং সাধারণ সম্পাদক সর্বোচ্চ ৭ (সাত) দিনের ছুটি মঞ্জুর করতে পারবেন।</string>
    <string name="dhara20u">অন্যান্য ছুটি কার্যনির্বাহী কমিটি আলোচনার মাধ্যমে সিদ্ধান্ত নিবেন।</string>
</resources>