<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context="pnpmsjm.com.bd.ourmasjid_1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        //Head
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@color/Green_with_80_Black">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextDharaNo"
                android:textColor="@color/Yellow"
                android:text="@string/dd9"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextDharaNanme"
                android:textColor="@color/White"
                android:text="@string/hh9"/>


        </LinearLayout>

        //Body
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/Background"
            android:layout_weight="16">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/k"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9k"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/kh"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9kh"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/g"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9g"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/gh"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9gh"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/u"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9u"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/c"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9c"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/ch"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9ch"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/j"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9j"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/jh"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara9jh"/>
                    </LinearLayout>





                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </LinearLayout>






</RelativeLayout>
