<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context="pnpmsjm.com.bd.ourmasjid_1.Dhara_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        //Head
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@color/Green_with_80_Black">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextDharaNo"
                android:textColor="@color/Yellow"
                android:text="@string/dd20"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextDharaNanme"
                android:textColor="@color/White"
                android:text="@string/hh20"/>


        </LinearLayout>

        //Body
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/Background"
            android:layout_weight="17">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/k"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="14"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara20k"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">4
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/kh"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="14"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara20kh"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">4
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/g"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="14"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara20g"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">4
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/gh"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="14"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara20gh"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">4
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/u"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="14"
                            style="@style/TextBody"
                            android:textColor="@color/Green_with_80_Black"
                            android:text="@string/dhara20u"/>
                    </LinearLayout>









                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </LinearLayout>






</RelativeLayout>
