<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context="pnpmsjm.com.bd.ourmasjid_1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        //Head
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@color/Green_with_80_Black">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextDharaNo"
                android:textColor="@color/Yellow"
                android:text="@string/dd3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextDharaNanme"
                android:textColor="@color/White"
                android:text="@string/hh3"/>


        </LinearLayout>

        //Body
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/Background"
            android:layout_weight="16">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            style="@style/TextBody"
                            android:textColor="@color/Black"
                            android:text="@string/dhara3name"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            android:textColor="@color/Black"
                            style="@style/TextBody"
                            android:text="@string/dhara3namedetail"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="15"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            style="@style/TextBody"
                            android:textColor="@color/Black"
                            android:text="@string/dhara3addr"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            android:textColor="@color/Black"
                            style="@style/TextBody"
                            android:text="@string/dhara3addrdetail"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </LinearLayout>






</RelativeLayout>
